fix: horizontal scroll bar and footer extra margin (#611)

--- a/src/app/_samples/mediaco/components/banner/banner.component.scss
+++ b/src/app/_samples/mediaco/components/banner/banner.component.scss
@@ -34,8 +34,6 @@
 }
 
 .background-image-style {
-  margin-left: 1rem;
-  margin-right: -16px;
   height: calc(19rem);
   background-size: cover;
   background-position: center center;
